// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rss works happy path 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\" ?>
<rss version=\\"2.0\\">
<channel>
 <title>Davenport Fooda</title>
 <description>Kevin Johnson's Davenport Fooda RSS feed</description>
 <link>https://fooda.com/my</link>
 <lastBuildDate>Thu, 27 Feb 2020 22:46:39 GMT</lastBuildDate>
 <pubDate>Thu, 27 Feb 2020 11:00:00 GMT</pubDate>
 <ttl>10</ttl>

 
</channel>
</rss>"
`;

exports[`rss works just one popup 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\" ?>
<rss version=\\"2.0\\">
<channel>
 <title>Davenport Fooda</title>
 <description>Kevin Johnson's Davenport Fooda RSS feed</description>
 <link>https://fooda.com/my</link>
 <lastBuildDate>Thu, 27 Feb 2020 22:46:39 GMT</lastBuildDate>
 <pubDate>Thu, 27 Feb 2020 11:00:00 GMT</pubDate>
 <ttl>10</ttl>

 
</channel>
</rss>"
`;

exports[`rss works menu not today 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\" ?>
<rss version=\\"2.0\\">
<channel>
 <title>Davenport Fooda</title>
 <description>Kevin Johnson's Davenport Fooda RSS feed</description>
 <link>https://fooda.com/my</link>
 <lastBuildDate>Thu, 27 Feb 2020 22:46:39 GMT</lastBuildDate>
 <pubDate>Thu, 27 Feb 2020 11:00:00 GMT</pubDate>
 <ttl>10</ttl>

 
 <item>
 <title>
   Thursday at Davenport: Jersey Mike's
 </title>
 <description></description>
 <link>http://app.fooda.com/accounts/1729/popup/menu_page/P0733968/items?filterable%5Bvendor_id%5D=6563</link>
 <pubDate>Thu, 27 Feb 2020 11:00:00 GMT</pubDate>
</item>
 

 <item>
 <title>
   Thursday at Davenport: Brothers Restaurant Tacos
 </title>
 <description></description>
 <link>http://app.fooda.com/accounts/1729/popup/menu_page/P0733968/items?filterable%5Bvendor_id%5D=4785</link>
 <pubDate>Thu, 27 Feb 2020 11:00:00 GMT</pubDate>
</item>
 
</channel>
</rss>"
`;

exports[`rss works missing link 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\" ?>
<rss version=\\"2.0\\">
<channel>
 <title>Davenport Fooda</title>
 <description>Kevin Johnson's Davenport Fooda RSS feed</description>
 <link>https://fooda.com/my</link>
 <lastBuildDate>Thu, 27 Feb 2020 22:46:39 GMT</lastBuildDate>
 <pubDate>Thu, 27 Feb 2020 11:00:00 GMT</pubDate>
 <ttl>10</ttl>

 
</channel>
</rss>"
`;

exports[`rss works no popups 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\" ?>
<rss version=\\"2.0\\">
<channel>
 <title>Davenport Fooda</title>
 <description>Kevin Johnson's Davenport Fooda RSS feed</description>
 <link>https://fooda.com/my</link>
 <lastBuildDate>Thu, 27 Feb 2020 22:46:39 GMT</lastBuildDate>
 <pubDate>Thu, 27 Feb 2020 11:00:00 GMT</pubDate>
 <ttl>10</ttl>

 
</channel>
</rss>"
`;
